tests/ui/g-par-ambiguous-endpoint-op.stderr
error[E0080]: evaluation panicked: parallel endpoint operations must be unambiguous
 --> src/g.rs
  |
  |             panic_choreography_error(error);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::ProgramProjection::<hibana::g::Par<hibana::g::Send<0, 1, hibana::g::Msg<5, ()>>, hibana::g::Send<0, 2, hibana::g::Msg<5, ()>>>, 8>::VALIDATION` failed inside this call
  |
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel endpoint operations must be unambiguous")
  |             ---------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |         let () = Self::VALIDATION;
  |                  ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |             &ProgramProjection::<Steps, CAPACITY>::PROGRAM_REF,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |     &RoleProjection::<ROLE, Steps, CAPACITY>::IMAGE_REF
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |       let image = const {
  |  _________________^
  | |         let required_rows = <Steps as ProgramShape>::SOURCE_ROW_COUNT;
  | |         if required_rows <= 8 {
  | |             role_projection::role_projection_image_for::<ROLE, Steps, 8>()
... |
  | |     };
  | |_____^

note: the above error was encountered while instantiating `fn g::project::<0, Par<hibana::g::Send<0, 1, Msg<5, ()>>, hibana::g::Send<0, 2, Msg<5, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
